fix alignment of play and share buttons

--- a/app/styles/layout/story/_story-content.scss
+++ b/app/styles/layout/story/_story-content.scss
@@ -44,6 +44,8 @@
 
 .lead-header {
   min-height: 450px;
+  margin-bottom: 1em;
+
   h1 {
     padding-top: 10%;
   }
@@ -75,6 +77,7 @@
 
   p {
     font-weight: 400;
+    margin-top: .25em;
   }
 
   a {
